--- a/src/Cards.css
+++ b/src/Cards.css
@@ -1,4 +1,20 @@
-.cardDisplay{
+.cardDisplay {
+    position: absolute;
     width: 125px;
     height:150px;
+    z-index: 2;
+}
+
+.cardBackStart {
+    position: absolute;
+    width: 125px;
+    height:150px;
+    z-index: 3;
+}
+
+.cardBackFlipped {
+    position: absolute;
+    width: 125px;
+    height:150px;
+    z-index: 1;
 }
