--- a/src/Cards.css
+++ b/src/Cards.css
@@ -1,33 +1,39 @@
 
-div.card-image .cardDisplay {
+.cardDisplay, .cardDisplayShowing, .cardBackStart, .cardBackFlipped, .card {
+    width: 175px;
+    height: 200px;
+}
+
+div.fruits .cardDisplay {
     position: relative;
-    width: 125px;
-    height:150px;
     z-index: -2;
 }
 
-div.card-image .cardDisplayShowing {
+div.fruits .cardDisplayShowing {
     position: relative;
-    width: 150px;
-    height: 150px;
     z-index: 2;
 }
 
-div.card-image .cardBackStart {
+div.fruits .cardBackStart {
     position: absolute;
-    width: 125px;
-    height:150px;
     z-index: 1;
 }
 
-div.card-image .cardBackFlipped {
+div.fruits .cardBackFlipped {
     position: absolute;
-    width: 125px;
-    height:150px;
     z-index: -1;
 }
 
-div.card-image .card {
-    height: 150px;
-    width: 125px;
+.timerStyle {
+    border: 1px solid darkgrey;
+    border-radius: 10px;
+    text-align: center;
+    padding: 15px;
+    box-shadow: .5px 1px 2px grey;
+    box-sizing: border-box;
 }
+
+.rightalign {
+   float: right;
+}
+
